force-app/main/default/objects/InboundQueue__c/InboundQueue__c.object-meta.xml
<CustomObject>
    <description>Inbound Queue</description>
    <label>Inbound Queue</label>
    <nameField>
        <displayFormat>I-{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Inbound Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>