force-app/main/default/objects/InboundQueue__c/fields/DataFormat__c.field-meta.xml
<CustomField>
    <fullName>DataFormat__c</fullName>
    <description>Payload data format</description>
    <label>Data Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JSON</fullName>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
            <value>
                <fullName>TEXT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>