force-app/main/default/objects/InboundQueue__c/fields/ExternalSequenceId__c.field-meta.xml
<CustomField>
    <fullName>ExternalSequenceId__c</fullName>
    <label>External Sequence Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>