force-app/main/default/objects/InboundQueue__c/fields/ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPIName__c</fullName>
    <description>Object API Name</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>