force-app/main/default/objects/InboundQueue__c/fields/RequestLookup__c.field-meta.xml
<CustomField>
    <fullName>RequestLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Lookup</label>
    <referenceTo>OutboundQueue__c</referenceTo>
    <relationshipLabel>Inbound Queue</relationshipLabel>
    <relationshipName>InboundQueue</relationshipName>
    <type>Lookup</type>
</CustomField>