force-app/main/default/objects/InboundQueue__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <description>Source system for inbound message</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>